# jpx_tokyo_market_prediction

./: .gitignore  README.md  pyproject.toml
notebook/: G-Res&VariableSelectionNN.ipynb  eda.ipynb  fold-1.hdf5  fold-2.hdf5  nn.ipynb  nn_2.ipynb  nn_3.ipynb  preparation.ipynb  scaling.ipynb  sector_eda.ipynb  simple_model.ipynb  tda.ipynb  train2.ipynb
src/: cv.py  feature_engineering.py  get_time_info.py  preprocess.py  train.py  train_unpivot.py  utils.py
src/metrics/: __init__.py  custom_metric.py  eval.py
src/validation/: split.py
